Fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -340,16 +340,6 @@ footer {
         width: 300px;
         height: 275px; } }
 
-.about__blob {
-  width: 550px;
-  position: absolute;
-  top: 400px;
-  left: 60%; }
-  @media screen and (max-width: 576px) {
-    .about__blob {
-      top: 300px;
-      left: 50%; } }
-
 .about__icon {
   width: 550px;
   margin-bottom: -100px;
